--- a/package.json
+++ b/package.json
@@ -42,6 +42,7 @@
     "babel-plugin-module-resolver": "^3.2.0",
     "husky": "^1.1.2",
     "metro-react-native-babel-preset": "^0.49.0",
+    "react-native-dotenv": "^0.2.0",
     "react-native-typescript-transformer": "^1.2.10",
     "rimraf": "^2.6.2",
     "tslint": "^5.12.1",
